[package]
name = "emuman"
description = "Utility for managing emulator ROM files."
version = "2.11.1"
authors = ["Brian Langenberger <bjl@usa.net>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/tuffy/emuman"
edition = "2021"

[dependencies]
clap = {version = "4.5", features=["derive"]}
sha1_smol = "1.0"
rayon = "1.11"
walkdir = "2"
directories = "6.0"
serde = "1.0"
serde_derive = "1.0"
toml = "0.9"
ciborium = "0.2"
fxhash = "0.2"
nohash = "0.2"
indicatif = {version = "0.18", features=["rayon"]}
zip = "4.3"
dashmap = {version = "6.1", features=["rayon"]}
attohttpc = "0.30"
quick-xml = {version = "0.38", features=["serialize"]}
url = "2.5"
hex = "0.4"
base64 = "0.22"
inquire = "0.7"
iter-group = "0.3"
comfy-table = "7.1"
bitstream-io = "4.5"
terminal_size = "0.4"
filesize = "0.2"
fnv = "1.0.7"
sevenz-rust = "0.6"

[target.'cfg(not(target_os = "windows"))'.dependencies]
xattr = "1.3"
